--- a/micro-chatapp/src/ChatApp.css
+++ b/micro-chatapp/src/ChatApp.css
@@ -137,7 +137,9 @@ h1{
 h1,h2,h3,h4,h5,h6{
     margin-bottom: 0;
 }
-
+.pacifino{
+    /* font-family: 'Great Vibes', cursive; */
+}
 .chat-window {
     width: 330px;
     /* margin: auto;
@@ -156,14 +158,38 @@ h1,h2,h3,h4,h5,h6{
     width: 100%;
     /* min-height: 450px; */
     padding: 20px 20px;
-    background: url(./h.jpg);
+    background: url(./h.svg);
     height:390px;
+    border-width: 0px;
     /* overflow-y:auto; */
     /* background: linear-gradient(-45deg, #313131, #5c5c5c, #d8d8d8, #9d9e9e);
       background-size: 400% 400%;
     animation: gradientBG 15s ease infinite; */
 }
-
+.unauth-input{
+    width:100%;
+    height:50px;
+    /* background-color: #f5f5f5; */
+    background: url(./h.svg);
+    border-radius: 0 0 10px 10px;
+    border-width: 0px;
+    padding: 10px;
+    font-size: 1.1em;
+    width:100%;
+    height:50px;
+    border-width: 0px;
+    /* border-color: #6c43a7; */
+    /* background-color: #f5f5f5; */
+    /* color: #464646; */
+    /* border-style: solid; */
+    /* border-radius: 0 0 10px 10px; */
+    /* box-shadow: 0px 0px 3px rgba(158,158,158,.71); */
+    /* text-shadow: 0px 0px 0px rgba(66,66,66,.0); */
+    /* background: linear-gradient(90deg, rgb(245, 246, 250), rgb(207, 207, 207), rgb(245, 246, 250)); */
+    /* background-repeat: no-repeat; */
+    background-size: 80%;
+    /* animation: animate 3s cubic-bezier(0.54, 0.01, 0.52, 0.99) infinite; */
+}
 .message-box {
     width: 100%;
     padding: 20px 20px;
@@ -174,7 +200,48 @@ h1,h2,h3,h4,h5,h6{
     border: none;
     padding: 5px;
 }
-
+.fb-svg{
+    enable-background:new 0 0 408.788 408.788;
+    margin-right:10px;
+}
+.fb-path{
+    fill:#475993;
+}
+.g-svg{
+    enable-background:new 0 0 512 512;
+    margin-right:10px;
+}
+.g-path-1{
+    fill:#FBBB00;
+}
+.g-path-2{
+    fill:#518EF8;
+}
+.g-path-3{
+    fill:#28B446;
+}
+.g-path-4{
+    fill:#F14336;
+}
+.ticket-svg{
+    enable-background:new 0 0 481.1 481.1;
+}
+.ticket-path{
+    fill:#FFFFFF;
+}
+.mail-svg{
+    enable-background:new 0 0 512 512;
+}
+.mail-path{
+    fill:#ffffff;
+}
+.chat-svg{
+    enable-background:new 0 0 477.6 477.6;
+    margin-top:12px;
+}
+.error-svg{
+    enable-background:new 0 0 52 52;
+}
 .chat-bubble {
     font-size: 20px;
     margin-bottom: 20px;
@@ -650,17 +717,17 @@ input[placeholder]{
 }
 .modal-login-window {
     border-radius: 10px;
-    width: 400px;
+    width: 290px;
     position: absolute;
-    top: 30%;
-    left: 35%;
+    top: 45%;
+    /* left: 35%; */
     max-height: 90vh;
     transform: translate(-50%, -50%);
     padding: 1em;
     background: #ffffff;
-    -webkit-box-shadow: 0px 0px 8px 1px rgba(204,204,204,1);
+    /* -webkit-box-shadow: 0px 0px 8px 1px rgba(204,204,204,1);
     -moz-box-shadow: 0px 0px 8px 1px rgba(204,204,204,1);
-    box-shadow: 0px 0px 8px 1px rgba(204,204,204,1);
+    box-shadow: 0px 0px 8px 1px rgba(204,204,204,1); */
 }
 
 .modal-window:target {
@@ -733,19 +800,22 @@ header {
     margin-left:auto !important;
     margin-right:auto !important;
     margin-bottom: 20px!important;
-    padding:0 20px;
+    /* padding:0 20px; */
 }
 .modal-header{
     display: block;
     font-family: medium-marketing-display-font,Georgia,Cambria,"Times New Roman",Times,serif!important;
     font-style: normal!important;
     font-weight: 500!important;
-    font-size: 32px!important;
+    /* font-size: 32px!important; */
     line-height: 36px!important;
     -webkit-transform: translateY(-2px);
     transform: translateY(-2px);
     border: 0;
     /* text-align: center; */
+}
+.model-subtitle{
+    font-size: 12px;
 }
 .modal-window div:not(:last-of-type) {
     margin-bottom: 15px;
@@ -805,12 +875,12 @@ a:hover {
     border:1px solid rgba(108,117,125,.3);
     color: #333;
     border-radius: 5px;
-    padding: 5px 36px;
-    width:80%;
+    padding: 5px 20px;
+    width:100%;
     text-align: left;
     margin-bottom:15px;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 12px;
     background: transparent;
 }
 .btn--primary--outline:hover{
