--- a/micro-chatapp/src/ChatApp.css
+++ b/micro-chatapp/src/ChatApp.css
@@ -158,7 +158,7 @@ h1,h2,h3,h4,h5,h6{
     width: 100%;
     /* min-height: 450px; */
     padding: 20px 20px;
-    background: url(./h.svg);
+    background:#000;
     height:390px;
     border-width: 0px;
     /* overflow-y:auto; */
@@ -170,7 +170,7 @@ h1,h2,h3,h4,h5,h6{
     width:100%;
     height:50px;
     /* background-color: #f5f5f5; */
-    background: url(./h.svg);
+    background:#000;
     border-radius: 0 0 10px 10px;
     border-width: 0px;
     padding: 10px;
